--- a/app/admin/template/financial/account/transaction.twig
+++ b/app/admin/template/financial/account/transaction.twig
@@ -313,7 +313,7 @@
 								<option value="-1">{% trans "All" %}</option>
 								{% for bank_account_statement in bank_account.get_bank_account_statements() %}
 									<option value="{{ bank_account_statement.id }}" {% if pager.has_condition('bank_account_statement_transaction.bank_account_statement_id', bank_account_statement.id) %}selected{% endif %}>
-										{{ bank_account_statement.date|date }} {{ bank_account_statement.sequence }}
+										{{ bank_account_statement.original_situation_date|date }} {{ bank_account_statement.sequence }}
 									</option>
 								{% endfor %}
 							</select>
