--- a/store/pdf/default/template/creditnote/html.twig
+++ b/store/pdf/default/template/creditnote/html.twig
@@ -77,7 +77,7 @@
 
 			$font = $fontMetrics->get_font("calibri", "bold");
 			$size = 14;
-			$creditnote_label = "{% trans "Invoice" %} {{ creditnote.number }} ";
+			$creditnote_label = "{% trans "Creditnote" %} {{ creditnote.number }} ";
 			$pdf->text($x, $y, $creditnote_label, $font, $size);
 
 		');
