bugfix: store direct_invoice_reference

--- a/app/admin/template/sales/invoice/queue/recurring.twig
+++ b/app/admin/template/sales/invoice/queue/recurring.twig
@@ -108,7 +108,7 @@
 						<div class="form-group">
 							<label class="col-xs-4 control-label">{% trans "Invoice reference" %}</label>
 							<div class="col-xs-8">
-								<input type="text" class="form-control" name="invoice_queue_recurring_gruop[direct_invoice_reference]">
+								<input type="text" class="form-control" name="invoice_queue_recurring_group[direct_invoice_reference]" value="{{ invoice_queue_recurring_group.direct_invoice_reference }}">
 							</div>
 						</div>
 					</div>
