--- a/app/admin/template/administrative/customer/detail.twig
+++ b/app/admin/template/administrative/customer/detail.twig
@@ -9,12 +9,12 @@
 	{% elseif env.sticky_session.message is defined %}
 		{{ base.display_flash_message(env.sticky_session.message, 'customer') }}
 	{% endif %}
-
+    
 	<form class="form form-horizontal form-condensed" method="post" action="/administrative/customer/detail?action=edit&id={{ customer.id }}">
 		<div class="form-group{% if 'company' in errors|keys %} has-error{% endif %}">
 			<label for="company" class="col-xs-3 control-label">{% trans "Company" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="customer[company]" id="company" class="form-control" value="{{ customer.company }}">
+				<input type="text" name="customer[company]" id="company" class="form-control" value="{% if customer.company is defined and customer.company is not empty %}{{ customer.company }}{% elseif env.post.customer.company is defined %}{{ env.post.customer.company }}{% endif %}">
 				{{ form.invalid_input('company', errors) }}
 			</div>
 		</div>
@@ -22,7 +22,7 @@
 		<div class="form-group{% if 'firstname' in errors|keys %} has-error{% endif %}">
 			<label for="firstname" class="col-xs-3 control-label">{% trans "Firstname" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="customer[firstname]" id="firstname" class="form-control" value="{{ customer.firstname }}">
+				<input type="text" name="customer[firstname]" id="firstname" class="form-control" value="{% if customer.firstname is defined and customer.firstname is not empty %}{{ customer.firstname }}{% elseif env.post.customer.firstname is defined %}{{ env.post.customer.firstname }}{% endif %}">
 				{{ form.invalid_input('firstname', errors) }}
 			</div>
 		</div>
@@ -30,7 +30,7 @@
 		<div class="form-group{% if 'lastname' in errors|keys %} has-error{% endif %}">
 			<label for="lastname" class="col-xs-3 control-label">{% trans "Lastname" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="customer[lastname]" id="lastname" class="form-control" value="{{ customer.lastname }}">
+				<input type="text" name="customer[lastname]" id="lastname" class="form-control" value="{% if customer.lastname is defined and customer.lastname is not empty %}{{ customer.lastname }}{% elseif env.post.customer.lastname is defined %}{{ env.post.customer.lastname }}{% endif %}">
 				{{ form.invalid_input('lastname', errors) }}
 			</div>
 		</div>
@@ -38,7 +38,7 @@
 		<div class="form-group{% if 'street' in errors|keys %} has-error{% endif %}">
 			<label for="street" class="col-xs-3 control-label">{% trans "Street" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="customer[street]" id="street" class="form-control" value="{{ customer.street }}">
+				<input type="text" name="customer[street]" id="street" class="form-control" value="{% if customer.street is defined and customer.street is not empty %}{{ customer.street }}{% elseif env.post.customer.street is defined %}{{ env.post.customer.street }}{% endif %}">
 				{{ form.invalid_input('street', errors) }}
 			</div>
 		</div>
@@ -46,7 +46,7 @@
 		<div class="form-group{% if 'housenumber' in errors|keys %} has-error{% endif %}">
 			<label for="housenumber" class="col-xs-3 control-label">{% trans "Housenumber" %}</label>
 			<div class="col-xs-2">
-				<input type="text" name="customer[housenumber]" id="housenumber" class="form-control" value="{{ customer.housenumber }}">
+				<input type="text" name="customer[housenumber]" id="housenumber" class="form-control" value="{% if customer.housenumber is defined and customer.housenumber is not empty %}{{ customer.housenumber }}{% elseif env.post.customer.housenumber is defined %}{{ previous_submit.housenumber }}{% endif %}">
 				{{ form.invalid_input('housenumber', errors) }}
 			</div>
 		</div>
@@ -54,7 +54,7 @@
 		<div class="form-group{% if 'city' in errors|keys %} has-error{% endif %}">
 			<label for="city" class="col-xs-3 control-label">{% trans "City" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="customer[city]" id="city" class="form-control" value="{{ customer.city }}">
+				<input type="text" name="customer[city]" id="city" class="form-control" value="{% if customer.city is defined and customer.city is not empty %}{{ customer.city }}{% elseif env.post.customer.city is defined %}{{ env.post.customer.city }}{% endif %}">
 				{{ form.invalid_input('city', errors) }}
 			</div>
 		</div>
@@ -62,7 +62,7 @@
 		<div class="form-group{% if 'zipcode' in errors|keys %} has-error{% endif %}">
 			<label for="zipcode" class="col-xs-3 control-label">{% trans "Zip code" %}</label>
 			<div class="col-xs-2">
-				<input type="text" name="customer[zipcode]" id="zipcode" class="form-control" value="{{ customer.zipcode }}">
+				<input type="text" name="customer[zipcode]" id="zipcode" class="form-control" value="{% if customer.zipcode is defined and customer.zipcode is not empty%}{{ customer.zipcode }}{% elseif env.post.customer.zipcode is defined %}{{ env.post.customer.zipcode }}{% endif %}">
 				{{ form.invalid_input('zipcode', errors) }}
 			</div>
 		</div>
@@ -79,7 +79,7 @@
 					{% endif %}
 
 					{% for country in countries[group] %}
-						<option value="{{ country.id }}" data-iso2="{{ country.iso2 }}" {% if customer.country_id == country.id %}selected="selected"{% endif %}>{{ country.name }}</option>
+						<option value="{{ country.id }}" data-iso2="{{ country.iso2 }}" {% if customer.country_id is defined and customer.country_id == country.id %}selected="selected"{% elseif env.post.customer.country_id is defined and env.post.customer.country_id == country.id %}selected="selected"{% endif %}>{{ country.name }}</option>
 					{% endfor %}
 					</optgroup>
 				{% endfor %}
@@ -91,7 +91,7 @@
 		<div class="form-group{% if 'email' in errors|keys %} has-error{% endif %}">
 			<label for="email" class="col-xs-3 control-label">{% trans "Email" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="customer[email]" id="email" class="form-control" value="{{ customer.email }}">
+				<input type="text" name="customer[email]" id="email" class="form-control" value="{% if customer.email is defined and customer.email is not empty %}{{ customer.email }}{% elseif env.post.customer.email is defined %}{{ env.post.customer.email }}{% endif %}">
 				{{ form.invalid_input('email', errors) }}
 			</div>
 		</div>
@@ -99,7 +99,7 @@
 		<div class="form-group{% if 'phone' in errors|keys %} has-error{% endif %}">
 			<label for="phone" class="col-xs-3 control-label">{% trans "Phone" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="customer[phone]" id="phone" class="form-control" value="{{ customer.phone }}">
+				<input type="text" name="customer[phone]" id="phone" class="form-control" value="{% if customer.phone is defined and customer.phone is not empty %}{{ customer.phone }}{% elseif env.post.customer.phone is defined %}{{ env.post.customer.phone }}{% endif %}">
 				{{ form.invalid_input('phone', errors) }}
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 		<div class="form-group{% if 'mobile' in errors|keys %} has-error{% endif %}">
 			<label for="mobile" class="col-xs-3 control-label">{% trans "Mobile" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="customer[mobile]" id="mobile" class="form-control" value="{{ customer.mobile }}">
+				<input type="text" name="customer[mobile]" id="mobile" class="form-control" value="{% if customer.mobile is defined and customer.mobile is not empty %}{{ customer.mobile }}{% elseif env.post.customer.mobile is defined %}{{ env.post.customer.mobile }}{% endif %}">
 				{{ form.invalid_input('mobile', errors) }}
 			</div>
 		</div>
@@ -115,7 +115,7 @@
 		<div class="form-group{% if 'fax' in errors|keys %} has-error{% endif %}">
 			<label for="fax" class="col-xs-3 control-label">{% trans "Fax" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="customer[fax]" id="fax" class="form-control" value="{{ customer.fax }}">
+				<input type="text" name="customer[fax]" id="fax" class="form-control" value="{% if customer.fax is defined and customer.fax is not empty %}{{ customer.fax }}{% elseif env.post.customer.fax is defined %}{{ env.post.customer.fax }}{% endif %}">
 				{{ form.invalid_input('fax', errors) }}
 			</div>
 		</div>
@@ -124,7 +124,7 @@
 			<label for="vat" class="col-xs-3 control-label">{% trans "Vat" %}</label>
 			<div class="col-xs-1"><input type="text" class="form-control" id="vat_prefix" readonly value="AT" /></div>
 			<div class="col-xs-3">
-				<input type="text" name="customer[vat]" id="vat" class="form-control" value="{{ customer.vat }}">
+				<input type="text" name="customer[vat]" id="vat" class="form-control" value="{% if customer.vat is defined and customer.vat is not empty %}{{ customer.vat }}{% elseif env.post.customer.vat is defined %}{{ env.post.customer.vat }}{% endif %}">
 				{{ form.invalid_input('vat', errors) }}
 			</div>
 		</div>
@@ -139,7 +139,7 @@
 		<div class="form-group">
 		    <label class="col-xs-3 control-label">{% trans "Comments" %}</label>
 		    <div class="col-xs-9">
-		        <textarea name="customer[comment]" class="form-control">{{ customer.comment }}</textarea>
+		        <textarea name="customer[comment]" class="form-control">{% if customer.comment is defined and customer.comment is not empty %}{{ customer.comment }}{% elseif env.post.customer.comment is defined %}{{ env.post.customer.comment }}{% endif %}</textarea>
 		    </div>
 		</div>
 
