--- a/app/admin/template/sales/invoice.twig
+++ b/app/admin/template/sales/invoice.twig
@@ -196,12 +196,13 @@
 					</thead>
 					<tbody>
 					{% for invoice_item in invoice.get_invoice_items() %}
+
 						<tr>
 							<td>{{ invoice_item.description|nl2br }}</td>
 							<td>{{ invoice_item.vat_rate_value|number_format }}%</td>
 							<td>{{ invoice_item.qty|number_format }}</td>
-							<td class="{% if invoice.vat_mode == 'line' %}text-muted{% endif %} text-right">&euro;{{ (invoice_item.get_price_excl()/invoice_item.qty)|number_format }}</td>
-							<td class="{% if invoice.vat_mode == 'group' %}text-muted{% endif %} text-right">&euro;{{ (invoice_item.get_price_incl()/invoice_item.qty)|number_format }}</td>
+							<td class="{% if invoice.vat_mode == 'line' %}text-muted{% endif %} text-right">&euro;{{ (invoice_item.qty != 0 ? invoice_item.get_price_excl()/invoice_item.qty : invoice_item.price_excl)|number_format }}</td>
+							<td class="{% if invoice.vat_mode == 'group' %}text-muted{% endif %} text-right">&euro;{{ (invoice_item.qty != 0 ? invoice_item.get_price_incl()/invoice_item.qty : invoice_item.price_incl)|number_format }}</td>
 							<td class="{% if invoice.vat_mode == 'line' %}text-muted{% endif %} text-right">&euro;{{ invoice_item.get_price_excl()|number_format }}</td>
 							<td class="{% if invoice.vat_mode == 'group' %}text-muted{% endif %} text-right">&euro;{{ invoice_item.get_price_incl()|number_format }}</td>
 						</tr>
@@ -627,7 +628,61 @@
 							</tr>
 						</thead>
 						<tbody id="invoice-items">
-							{% for invoice_queue_item in invoice_queue_items %}
+
+							{% for invoice_item in env.post.invoice_item %}
+							<tr>
+								<td>
+									<select name="invoice_item[{{ loop.index }}][product_type_id]" class="form-control">
+										{% for product_type in product_types %}
+											<option value="{{ product_type.id }}" {% if product_type.id == invoice_item.product_type_id %}selected{% endif %}>{{ product_type.name }}</option>
+										{% endfor %}
+									</select>
+								</td>
+								<td>
+									<input type="hidden" name="invoice_item[{{ loop.index }}][invoice_queue_id]" value="{{ invoice_item.invoice_queue_id }}">
+									<textarea class="form-control autogrow" name="invoice_item[{{ loop.index }}][description]">{{ invoice_item.description }}</textarea>
+								</td>
+								<td>
+									<input type="text" class="form-control" name="invoice_item[{{ loop.index }}][qty]" value="{{ invoice_item.qty }}">
+								</td>
+								<td>
+									<input type="text" class="form-control" name="invoice_item[{{ loop.index }}][price]" value="{{ invoice_item.price }}">
+								</td>
+								<td>
+
+									<select name="invoice_item[{{ loop.index }}][customer_vat_rate_id]" class="form-control vat_regime_customer_country">
+										<option value="0">{% trans "No VAT" %} (0%)</option>
+										{% set selected = false %}
+										{% for vat_rate in customer_vat_rates %}
+											<option {% if selected == false and vat_rate.vat == invoice_queue_item.vat %}{% set selected = true %}selected{% endif %} value="{{ vat_rate.vat_rate_id }}">{{ vat_rate.vat_rate.name }} ({{ vat_rate.vat }}%)</option>
+										{% endfor %}
+									</select>
+
+									<select name="invoice_item[{{ loop.index }}][company_vat_rate_id]" class="form-control vat_regime_company_country">
+										<option {% if (selected == false and vat_rate.vat == invoice_queue_item.vat) or (invoice_item.company_vat_rate_id is defined and invoice_item.company_vat_rate_id == 0) %}{% set selected = true %}selected{% endif %} value="0">{% trans "No VAT" %} (0%)</option>
+										{% for vat_rate in company_vat_rates %}
+											<option {% if (vat_rate.vat_rate_id == 1 and invoice_item.company_vat_rate_id is not defined) or (invoice_item.company_vat_rate_id is defined and vat_rate.vat_rate_id == invoice_item.company_vat_rate_id) %}selected{% endif %} value="{{ vat_rate.vat_rate_id }}">{{ vat_rate.vat_rate.name }} ({{ vat_rate.vat }}%)</option>
+										{% endfor %}
+									</select>
+
+									<span class="vat_regime_none">
+										<p class="form-control-static">
+											{% trans "No VAT" %}
+										</p>
+									</span>
+
+								</td>
+								<td>
+									<div class="form-control-static">
+										<a href="javascript:void(0);" onclick="remove_item($(this));">
+											<span class="glyphicon glyphicon-remove"></span>
+										</a>
+									</div>
+								</td>
+							</tr>
+							{% endfor %}
+
+							{% for invoice_queue_item in invoice_queue_items if env.post.invoice_item is not defined %}
 							<tr>
 								<td>
 									<select name="invoice_item[{{ loop.index }}][product_type_id]" class="form-control">
@@ -652,14 +707,14 @@
 										<option value="0">{% trans "No VAT" %} (0%)</option>
 										{% set selected = false %}
 										{% for vat_rate in customer_vat_rates %}
-											<option {% if selected == false and vat_rate.vat == invoice_queue_item.vat %}{% set selected = true %}selected{% endif %} value="{{ vat_rate.vat_rate_id }}">{{ vat_rate.vat_rate.name }} ({{ vat_rate.vat }}%)</option>
+											<option {% if selected == false and vat_rate.id == invoice_queue_item.vat_rate_id %}{% set selected = true %}selected{% endif %} value="{{ vat_rate.vat_rate_id }}">{{ vat_rate.vat_rate.name }} ({{ vat_rate.vat }}%)</option>
 										{% endfor %}
 									</select>
 
 									<select name="invoice_item[{{ loop.index }}][company_vat_rate_id]" class="form-control vat_regime_company_country">
-										<option {% if selected == false and vat_rate.vat == invoice_queue_item.vat %}{% set selected = true %}selected{% endif %} value="0">{% trans "No VAT" %} (0%)</option>
+										<option {% if selected == false and vat_rate.id == invoice_queue_item.vat_rate_id %}{% set selected = true %}selected{% endif %} value="0">{% trans "No VAT" %} (0%)</option>
 										{% for vat_rate in company_vat_rates %}
-											<option {% if vat_rate.vat_rate_id == 1 %}selected{% endif %} value="{{ vat_rate.vat_rate_id }}">{{ vat_rate.vat_rate.name }} ({{ vat_rate.vat }}%)</option>
+											<option {% if vat_rate.vat_rate_id == invoice_queue_item.vat_rate_id %}selected{% endif %} value="{{ vat_rate.vat_rate_id }}">{{ vat_rate.vat_rate.name }} ({{ vat_rate.vat }}%)</option>
 										{% endfor %}
 									</select>
 
@@ -698,8 +753,8 @@
 			</div>
 		</form>
 
-
 		<script type="text/x-handlebars-template" id="new-invoice-item-tmpl">
+
 			<tr>
 				<td>
 					<select name="invoice_item[((nr))][product_type_id]" class="form-control">
@@ -853,14 +908,14 @@
 					</div>
 
 					<div class="form-group">
-					    <label class="col-xs-3 control-label">{% trans "Paid" %}</label>
-					    <div class="col-xs-9">
-					        <select name="paid" class="form-control">
+						<label class="col-xs-3 control-label">{% trans "Paid" %}</label>
+						<div class="col-xs-9">
+							<select name="paid" class="form-control">
 								<option value=""> - - </option>
 								<option value="0"{% if pager.has_condition('paid', 0) %} selected{% endif %}>{% trans "Unpaid" %}</option>
 								<option value="1"{% if pager.has_condition('paid', 1) %} selected{% endif %}>{% trans "Paid" %}</option>
 							</select>
-					    </div>
+						</div>
 					</div>
 
 					{% set conditions = pager.get_conditions() %}
