--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -11,7 +11,7 @@
 	<link type="text/css" href="/typeahead.js-bootstrap-css/typeaheadjs.css" rel="stylesheet">
 	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" media="handheld, all">
 	<link rel="stylesheet" href="/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
-	<link rel="stylesheet" href="/bootstrap-multiselect/dist/css/bootstrap-multiselect.css" />
+	<link rel="stylesheet" href="/bootstrap-select/dist/css/bootstrap-select.css" />
 	<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/codemirror/lib/codemirror.css">
 	<link rel="stylesheet" href="/bootstrap.multilevel.navbar.css" type="text/css" media="handheld, all">
@@ -26,7 +26,7 @@
 	<script type="text/javascript" src="/tigron-datetimepicker/js/tigron-datetimepicker.js"></script>
 	<script type="text/javascript" src="/jquery-zoom/jquery.zoom.min.js"></script>
 	<script type="text/javascript" src="/handlebars/handlebars.min.js"></script>
-	<script type="text/javascript" src="/bootstrap-multiselect/dist/js/bootstrap-multiselect.js"></script>
+	<script type="text/javascript" src="/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 	<script type="text/javascript" src="/autogrow-textarea/jquery.autogrowtextarea.min.js"></script>
 	<script type="text/javascript" src="/jquery-ui/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/bootstrap-checkbox/js/bootstrap-checkbox.js"></script>
