--- a/app/admin/template/administrative/document/invoice/pay.twig
+++ b/app/admin/template/administrative/document/invoice/pay.twig
@@ -64,8 +64,19 @@
 				<label class="col-xs-3 control-label">{% trans "Export format" %}</label>
 				<div class="col-xs-4">
 					<select name="export_format" class="form-control">
-						<option value="Export_Payment_Belfius">Belfius CSV</option>
 						<option value="Export_Payment_Sepa">SEPA (pain.001.001.03)</option>
+						<option value="Export_Payment_Belfius">Belfius CSV</option>
+					</select>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<label class="col-xs-3 control-label">{% trans "Pay with bank account" %}</label>
+				<div class="col-xs-4">
+					<select name="bank_account_id" class="form-control multiselect">
+						{% for bank_account in bank_accounts %}
+							<option value="{{ bank_account.id }}" data-content="<b>{% if bank_account.alias != '' %}{{ bank_account.alias }}{% else %}{{ bank_account.number }}{% endif %}</b><br />{{ bank_account.name }}<br />{{ bank_account.description }}<br />{{ bank_account.number }}" {% if bank_account.default_for_payment %}selected{% endif %}>{{ bank_account.name }} ({{ bank_account.number }})</option>
+						{% endfor %}
 					</select>
 				</div>
 			</div>
