Bugfix: remove customer contact

--- a/app/admin/template/administrative/customer/contact.twig
+++ b/app/admin/template/administrative/customer/contact.twig
@@ -56,7 +56,7 @@
 	});
 
 	function delete_contact(id) {
-		$.get('/sales/invoice/contact?action=delete&id=' + id, function(data) {
+		$.get('/administrative/customer/contact?action=delete&id=' + id, function(data) {
 			if(data['status'] == 1) {
 				$('#customer-contact-' + id).remove();
 				$('#invoice-create-step2 input').val('');
