--- a/app/admin/template/financial/account/transaction/modal.outgoing_invoice.twig
+++ b/app/admin/template/financial/account/transaction/modal.outgoing_invoice.twig
@@ -60,13 +60,23 @@
 	<div class="alert alert-danger hide">
 		{% trans "There is a problem with the amounts you have entered." %} {% trans "The total amount cannot exceed the amount of the transaction" %}.
 	</div>
+
+	<div class="form-group">
+		<label class="col-xs-3 control-label">{% trans "Current transaction balance" %}</label>
+		<div class="col-xs-3">
+			<p class="form-control-static" id="transaction_balance" data-value="{{ transaction.get_balance() }}">&euro;{{ transaction.get_balance() }}</p>
+		</div>
+	</div>
+
 	<div class="form-group">
 		<label class="col-xs-3 control-label">{% trans "Link with invoice" %}</label>
 		<div class="col-xs-3">
 			<div class="input-group">
 				<span class="input-group-addon">&euro;</span>
-				<input type="text" class="form-control" id="link_invoice_amount" style="width: 143px;" name="link_invoice_amount" value="">
-				<span class="input-group-addon" id="max_outgoing_invoice_amount"></span>
+				<input type="text" class="form-control" id="link_invoice_amount" style="width: 143px;" name="link_invoice_amount" value="0">
+				<span class="input-group-btn">
+					<button class="btn btn-default" type="button" id="max_outgoing_invoice_amount" data-value=""></button>
+				</span>
 			</div>
 		</div>
 	</div>
@@ -76,12 +86,15 @@
 		<div class="col-xs-4">
 			<div class="input-group">
 				<span class="input-group-addon">&euro;</span>
-				<input type="text" class="form-control" id="link_customer_amount" style="width: 143px;" name="link_customer_amount" value="">
-				<span class="input-group-btn">
-					<button class="btn btn-default" id="customer_amount_0" type="button">€0</button>
-					<button class="btn btn-default" id="customer_amount_max" type="button">{% trans "Max" %}</button>
-				</span>
+				<input type="text" class="form-control" id="link_customer_amount" style="width: 143px;" name="link_customer_amount" value="0">
 			</div>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-xs-3 control-label">{% trans "New transaction balance" %}</label>
+		<div class="col-xs-3">
+			<p class="form-control-static" id="new_transaction_balance"><b>&euro;{{ transaction.get_balance() }}</b></p>
 		</div>
 	</div>
 
@@ -91,7 +104,6 @@
 		</div>
 	</div>
 </script>
-
 
 <script type="text/javascript">
 	$('#search_outgoing_invoices').submit(function(event) {
@@ -128,16 +140,6 @@
 	var transaction_amount;
 	var invoice_amount;
 
-	function outgoing_invoice_fill_up() {
-		if (transaction_amount <= invoice_amount && transaction_amount > 0) {
-			$('#confirm_link_outgoing_invoices #link_invoice_amount').val(transaction_amount);
-			$('#confirm_link_outgoing_invoices #link_customer_amount').val(0);
-		} else {
-			$('#confirm_link_outgoing_invoices #link_invoice_amount').val(invoice_amount);
-			$('#confirm_link_outgoing_invoices #link_customer_amount').val( (Math.round( (transaction_amount-invoice_amount) * 100) / 100));
-		}
-	}
-
 	function table_outgoing_invoices_tr_click(row) {
 		var source = $("#selected-outgoing-invoice").html();
 		$('#confirm_link_outgoing_invoices').html(source)
@@ -145,41 +147,24 @@
 		invoice_amount = row.data('amount');
 
 		$('#confirm_link_outgoing_invoices #max_outgoing_invoice_amount').html('/ €' + invoice_amount);
+		$('#confirm_link_outgoing_invoices #max_outgoing_invoice_amount').attr('data-value', invoice_amount);
+
+		$('#confirm_link_outgoing_invoices #max_outgoing_invoice_amount').click(function() {
+			value = $(this).data('value');
+			$(this).parents('.input-group').find('.form-control').val(value).trigger('change');
+		});
+		$('#confirm_link_outgoing_invoices #max_outgoing_invoice_amount').click();
+
 		$('#invoice_id').val(row.data('id'));
 
-		$('#customer_amount_0').on('click', function() {
-			$(this).addClass('active');
-			$('#customer_amount_max').removeClass('active');
-			outgoing_invoice_fill_up();
-			$('#confirm_link_outgoing_invoices #link_customer_amount').val(0);
-		})
-
-		$('#customer_amount_max').on('click', function() {
-			outgoing_invoice_fill_up()
-			$(this).addClass('active');
-			$('#customer_amount_0').removeClass('active');
-		})
-
-		$('#customer_amount_0').click();
+		$('#link_invoice_amount,#link_outgoing_invoice #link_supplier_amount').change(function() {
+			balance = parseFloat($('#link_outgoing_invoice #transaction_balance').data('value'));
+			document_amount = parseFloat($('#link_invoice_amount').val());
+			customer_amount = parseFloat($('#link_outgoing_invoice #link_customer_amount').val());
+			new_balance = balance - document_amount - customer_amount;
+			$('#new_transaction_balance').html('<b>&euro;' + new_balance.toFixed(2) + '</b>');
+		});
 	}
-
-	$('#link_outgoing_invoice').submit(function(event) {
-		for_invoice = parseFloat($('#confirm_link_outgoing_invoices #link_invoice_amount').val());
-		for_customer = parseFloat($('#confirm_link_outgoing_invoices #link_customer_amount').val());
-
-		if (transaction_amount < for_invoice + for_customer) {
-			$('#confirm_link_outgoing_invoices .alert').removeClass('hide');
-			event.preventDefault();
-			return false;
-		} else if (for_invoice > invoice_amount) {
-			$('#confirm_link_outgoing_invoices .alert').removeClass('hide');
-			event.preventDefault();
-			return false;
-		} else {
-			$('#confirm_link_outgoing_invoices .alert').addClass('hide');
-			return true;
-		}
-	})
 </script>
 
 {% endblock body %}
